Header finalizado e section iniciado
Aprimora o estilo do cabeçalho e adiciona seção com conteúdo e imagem

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="./CSS/bootstrap.min.css">
     <link rel="stylesheet" href="/CSS/custom.css">
     <script src="./JS/jquery-3.7.1.min.js"></script>
-    <scrip></scrip>
+    <scrip>
+
+    </scrip>
 </head>
 <body>
     <header>
-        <nav id="menu_nav" class="navbar navbar-expand-lg bg-body-tertiary navbar-light bg-light"> 
+        <nav id="menu_nav" class="navbar navbar-expand-lg bg-body-tertiary navbar-light bg-light"> <!-- Header-->
             <div class="container-fluid">
-                <a id="logo" href="./index.html"><img>BookHive!🐝📚</a>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <a id="logo" href="./index.html"><img id="bee-logo" src="./Img/flying-color-stroke-honey-bee-83e01f.webp">BookHive!</a>
+                <div class="collapse navbar-collapse" id="navbar">
             <ul id="nav-list" class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -27,10 +29,15 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
             </ul>
-        </div>
+            </div>
         </nav>
     </header>
 
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit commodi ut fugit cum delectus, eius minus quae ducimus ipsum error ex assumenda modi nulla deleniti quia totam recusandae explicabo laboriosam!</p> 
+        <img src="./Img/flying-color-stroke-honey-bee-83e01f.webp" alt="Mascote Bee" id="bee-mascote">
+    </section>
+    
     <script src="./JS/bootstrap.bundle.min.js"></script>
 </body>
 </html>
