--- a/index.html
+++ b/index.html
@@ -13,30 +13,22 @@
     </scrip>
 </head>
 <body>
-    <header>
-        <nav id="menu_nav" class="navbar navbar-expand-lg bg-body-tertiary navbar-light bg-light"> <!-- Header-->
-            <div class="container-fluid">
-                <a id="logo" href="./index.html"><img id="bee-logo" src="./Img/flying-color-stroke-honey-bee-83e01f.webp">BookHive!</a>
-                <div class="collapse navbar-collapse" id="navbar">
-            <ul id="nav-list" class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Reviews</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-            </ul>
-            </div>
-        </nav>
+    <header class="flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="#" id="logo" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"><img id="bee" src="./Img/flying-color-stroke-honey-bee-83e01f.webp">BookHive!</a>
+         <ul id="nav" class="nav  nav-pills">
+            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">Home</a></li>
+            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">Features</a></li>
+            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">About</a></li>
+         </ul>
     </header>
 
-    <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit commodi ut fugit cum delectus, eius minus quae ducimus ipsum error ex assumenda modi nulla deleniti quia totam recusandae explicabo laboriosam!</p> 
-        <img src="./Img/flying-color-stroke-honey-bee-83e01f.webp" alt="Mascote Bee" id="bee-mascote">
-    </section>
+    <main>
+        <section>
+            
+        </section>
+    </main>
     
     <script src="./JS/bootstrap.bundle.min.js"></script>
 </body>
