Erro do css não atribuir corrigido

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="gusttavo_lima07">
     <title>BookHive!🐝📚</title>
     <link rel="stylesheet" href="./CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="/CSS/custom.css">
+    <link rel="stylesheet" href="./CSS/custom.css">
     <script src="./JS/jquery-3.7.1.min.js"></script>
     <scrip>
 
