--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="./CSS/media.css">
     <link rel="stylesheet" href="./CSS/fonts.css">
     <script src="./JS/jquery-3.7.1.min.js"></script>
-    <scrip>
-
-    </scrip>
+    <script>
+    </script>
 </head>
 <body>
     <header class="flex-wrap justify-content-center py-3 mb-4 border-bottom">
@@ -22,9 +21,10 @@
         </div> 
 
         <div id="search_books" class="input-group mb-3 ">
-            <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <button type="button" id="search_btn" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
+           
             <ul class="dropdown-menu ">
                 <li><a class="dropdown-item" href="#">Livros</a></li>
                 <li><a class="dropdown-item" href="#">Autores</a></li>
@@ -35,15 +35,31 @@
             </ul>
             <input id="input_search" type="text" placeholder="Pesquisar" aria-label="Pesquisar" aria-describedby="button-addon2">
         </div>
-        
-         <ul id="nav" class="nav  nav-pills ">
-            <li id="nav_topics" class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
-            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">Cadastros</a></li>
-            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">Avaliações</a></li>
-            <li id="nav_topics" class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
-         </ul>
-    </header>
 
+        <nav class="navbar navbar-expand-lg" id="nav_bar">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="menu_icon">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" id="nav_topics">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
     <main>
         <aside>
             <h2><span>Explore tudo sobre os melhores livros</span></h2>
